--- a/package.json
+++ b/package.json
@@ -28,18 +28,18 @@
     "build": "babel src -d dist",
     "clean": "rm -rf dist",
     "prepublish": "npm run clean && npm run build",
-    "test": "mocha --compilers js:babel-register",
+    "test": "mocha --compilers js:@babel/register",
     "test:watch": "npm run test -- --watch"
   },
   "dependencies": {
-    "babel-helper-regex": "^6.26.0",
+    "@babel/helper-regex": "^7.0.0",
     "regexpu-core": "^4.1.3"
   },
   "devDependencies": {
-    "babel-cli": "^6.26.0",
-    "babel-core": "^6.26.0",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-register": "^6.26.0",
+    "@babel/cli": "^7.0.0",
+    "@babel/core": "^7.0.0",
+    "@babel/preset-env": "^7.0.0",
+    "@babel/register": "^7.0.0",
     "istanbul": "^0.4.5",
     "mocha": "^3.5.3"
   }
